@@ -66,6 +66,7 @@
     'iwarp' => { libdep => 'gtk', ui => 1 },
     'jigsaw' => { libdep => 'gtk', ui => 1 },
     'laplace' => { libdep => 'glib', ui => 1 },
+    'lcms' => { libdep => 'glib', optional => 1, extralibs => 1 },
     'lens' => { libdep => 'gtk', ui => 1 },
     'lic' => { libdep => 'gtk', ui => 1 },
     'mail' => { libdep => 'gtk', ui => 1, optional => 1 },
